increase z-index of seq to fix the flickering problem

--- a/src/content_style.scss
+++ b/src/content_style.scss
@@ -131,6 +131,8 @@ body {
       margin-right: 10px;
       font-size: 14px;
       cursor: pointer;
+      position: relative;
+      z-index: 2;
 
       &:hover + .preview {
         display: block;
